--- a/debian/control
+++ b/debian/control
@@ -130,6 +130,7 @@ Depends: python-babel (>= 2.3.4),
          python-sqlalchemy (>= 1.0.10),
          python-stevedore (>= 1.17.1),
          python-swiftclient (>= 1:2.2.0),
+         python-troveclient (>= 1:2.2.0),
          python-webob (>= 1.6.0),
          python-xmltodict,
          ${misc:Depends},
