--- a/debian/control
+++ b/debian/control
@@ -218,6 +218,7 @@ Depends:
  python-sqlalchemy (>= 1.0.10),
  python-stevedore (>= 1:1.20.0),
  python-swiftclient (>= 1:3.2.0),
+ python-troveclient (>= 1:2.2.0),
  python-webob (>= 1:1.7.1),
  python-xmltodict (>= 0.10.1),
  ${misc:Depends},
